--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,7 +20,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&family=Lora:ital,wght@1,400;1,500;1,600;1,700&family=Pacifico&family=Varela&family=Varela+Round&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/2114d187a2.js" crossorigin="anonymous"></script>
-  <link rel="icon" href="./blogger.png">
+  <link rel="icon" href="./blog.png">
   <title>Omni Blog</title>
 </head>
 
